# code-indexer

./: .env.example  .gitignore  README.md  __main__.py  bootstrap.sh  docker-compose.yml  processor.py  pyproject.toml  requirements.txt  test_plugins.py
cli/: __init__.py  commands.py  help.py  parser.py
core/: chunking.py  collection.py  embeddings.py  processor.py  search.py  source_processor.py
plugins/: __init__.py  base.py  colors.py  crawl4ai.py  github.py  github_watcher.py  local.py  logger.py  qdrant.py  sources.py
plugins/analysis/: __init__.py  code_explainer.py  query_optimizer.py  syntax_search.py
plugins/search/: combined_search.py  search.py
scripts/: deploy.sh  index  index.py  install.sh
stubs/crawl4ai/: __init__.pyi
utils/: config.py  console.py  errors.py
